--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ ipykernel = "^6.22.0"
 pandas-stubs = "^2.0.0.230412"
 tqdm = "^4.65.0"
 scikit-learn = "^1.2.2"
+seaborn = "^0.12.2"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.3.0"}
