--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ pandas-stubs = "^2.0.0.230412"
 tqdm = "^4.65.0"
 scikit-learn = "^1.2.2"
 seaborn = "^0.12.2"
+plotly-express = "^0.4.1"
+nbformat = "^5.9.1"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.3.0"}
