--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ scikit-learn = "^1.2.2"
 seaborn = "^0.12.2"
 plotly-express = "^0.4.1"
 nbformat = "^5.9.1"
+llvmlite = "^0.40.1"
+numba = "^0.57.1"
+shap = "^0.42.1"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.3.0"}
