--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ nbformat = "^5.9.1"
 llvmlite = "^0.40.1"
 numba = "^0.57.1"
 shap = "^0.42.1"
+jinja2 = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 black = {extras = ["jupyter"], version = "^23.3.0"}
